@@ -2,12 +2,14 @@ package iuh.fit.utils;
 
 import com.dlsc.gemsfx.daterange.DateRange;
 import iuh.fit.controller.features.statistics.InvoiceRevenueStatisticsTabController;
+import iuh.fit.controller.features.statistics.RoomRevenueStatisticsTabController;
+import iuh.fit.controller.features.statistics.ServiceRevenueStatisticsTabController;
+import iuh.fit.controller.features.statistics.StatisticalController;
 import iuh.fit.models.enums.ExportExcelCategory;
 import iuh.fit.models.enums.Month;
-import iuh.fit.models.wrapper.InvoiceDisplayOnTable;
-import iuh.fit.models.wrapper.UsingRoomDetailDisplayOnTable;
-import iuh.fit.models.wrapper.UsingRoomDisplayOnTable;
+import iuh.fit.models.wrapper.*;
 import javafx.collections.ObservableList;
+import javafx.fxml.FXMLLoader;
 import javafx.scene.control.TableView;
 import javafx.stage.FileChooser;
 import org.apache.poi.ss.usermodel.Row;
@@ -20,11 +22,12 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.time.LocalDate;
+import java.util.Objects;
 
 public class ExportFileHelper {
     private static final String DATA_LOCATED = "D://Thống kê doanh thu";
 
-    public static void createExcelFile(TableView<InvoiceDisplayOnTable> tableView, String filePath, int numOfInvoice, double totalMoney){
+    public static void createInvoiceExcelFile(TableView<InvoiceDisplayOnTable> tableView, String filePath, int numOfInvoice, double totalMoney){
         try {
             Workbook workbook = new XSSFWorkbook();
             Sheet sheet = workbook.createSheet("Data");
@@ -42,7 +45,7 @@ public class ExportFileHelper {
                 contentRow.createCell(1).setCellValue(inv.getCusName());
                 contentRow.createCell(2).setCellValue(inv.getRoomID());
                 contentRow.createCell(3).setCellValue(inv.getEmpName());
-                contentRow.createCell(4).setCellValue(inv.getCreateDate());
+                contentRow.createCell(4).setCellValue(inv.getCreateDate().toString());
                 contentRow.createCell(5).setCellValue(inv.getDeposit());
                 contentRow.createCell(6).setCellValue(inv.getServiceCharge());
                 contentRow.createCell(7).setCellValue(inv.getRoomCharge());
@@ -69,6 +72,99 @@ public class ExportFileHelper {
             }
         }catch (Exception e){
             throw new IllegalArgumentException(e.getMessage());
+        }
+    }
+
+    public static void createServiceExcelFile(TableView<ServiceDisplayOnTable> tableView, String filePath, int numOfInvoice, double totalMoney){
+        try {
+            Workbook workbook = new XSSFWorkbook();
+            Sheet sheet = workbook.createSheet();
+            Row rowHeader = sheet.createRow(0);
+            for(int i = 0; i < tableView.getColumns().size(); i++){
+                rowHeader.createCell(i).setCellValue(
+                        tableView.getColumns().get(i).getText()
+                );
+            }
+
+            ObservableList<ServiceDisplayOnTable> data = tableView.getItems();
+            for(int i = 0; i < tableView.getItems().size(); i++){
+                Row record = sheet.createRow(i + 1);
+                ServiceDisplayOnTable instance = data.get(i);
+                record.createCell(0).setCellValue(instance.getServiceId());
+                record.createCell(1).setCellValue(instance.getServiceName());
+                record.createCell(2).setCellValue(instance.getServiceCategory());
+                record.createCell(3).setCellValue(instance.getEmployeeName());
+                record.createCell(4).setCellValue(instance.getDateAdded().toString());
+                record.createCell(5).setCellValue(instance.getQuantity());
+                record.createCell(6).setCellValue(instance.getUnitPrice());
+                record.createCell(7).setCellValue(instance.getTotalMoney());
+            }
+
+            Row statisticRow = sheet.createRow(tableView.getItems().size() + 1);
+            statisticRow.createCell(4).setCellValue("Số bản ghi");
+            statisticRow.createCell(5).setCellValue(numOfInvoice);
+            statisticRow.createCell(6).setCellValue("Tổng tiền");
+            statisticRow.createCell(7).setCellValue(totalMoney);
+
+            try (FileOutputStream fileOutputStream = new FileOutputStream(filePath)) {
+                workbook.write(fileOutputStream);
+            }catch (Exception e){
+                throw new IllegalArgumentException(e.getMessage());
+            }finally {
+                try {
+                    workbook.close();
+                }catch (Exception ignored){
+
+                }
+            }
+        }catch (Exception ignored){
+
+        }
+    }
+
+    public static void createRoomExcelFile(TableView<RoomDisplayOnTable> tableView, String filePath, int numOfInvoice, double totalMoney){
+        try {
+            Workbook workbook = new XSSFWorkbook();
+            Sheet sheet = workbook.createSheet();
+            Row rowHeader = sheet.createRow(0);
+            for(int i = 0; i < tableView.getColumns().size(); i++){
+                rowHeader.createCell(i).setCellValue(
+                        tableView.getColumns().get(i).getText()
+                );
+            }
+
+            ObservableList<RoomDisplayOnTable> data = tableView.getItems();
+            for(int i = 0; i < tableView.getItems().size(); i++){
+                Row record = sheet.createRow(i + 1);
+                RoomDisplayOnTable instance = data.get(i);
+                record.createCell(0).setCellValue(instance.getRoomID());
+                record.createCell(1).setCellValue(instance.getRoomCategory());
+                record.createCell(2).setCellValue(instance.getNumOfPeople());
+                record.createCell(3).setCellValue(instance.getBookingDate());
+                record.createCell(4).setCellValue(instance.getCheckInDate().toString());
+                record.createCell(5).setCellValue(instance.getCheckOutDate());
+                record.createCell(6).setCellValue(instance.getTotalMoney());
+            }
+
+            Row statisticRow = sheet.createRow(tableView.getItems().size() + 1);
+            statisticRow.createCell(3).setCellValue("Số bản ghi");
+            statisticRow.createCell(4).setCellValue(numOfInvoice);
+            statisticRow.createCell(5).setCellValue("Tổng tiền");
+            statisticRow.createCell(6).setCellValue(totalMoney);
+
+            try (FileOutputStream fileOutputStream = new FileOutputStream(filePath)) {
+                workbook.write(fileOutputStream);
+            }catch (Exception e){
+                throw new IllegalArgumentException(e.getMessage());
+            }finally {
+                try {
+                    workbook.close();
+                }catch (Exception ignored){
+
+                }
+            }
+        }catch (Exception ignored){
+
         }
     }
 
@@ -174,19 +270,23 @@ public class ExportFileHelper {
                 new FileChooser.ExtensionFilter("Excel Files", "*.xlsx"),
                 new FileChooser.ExtensionFilter("All Files", "*.*")
         );
+
+        File serviceRevenueFolder = new File(DATA_LOCATED.concat("//Doanh thu hóa đơn"));
+        if (!serviceRevenueFolder.exists()) serviceRevenueFolder.mkdirs();
+
         switch (type){
             case ExportExcelCategory.ALL_OF_TIME -> {
-                File invoiceRevenueFolder = new File(DATA_LOCATED.concat("//Tổng danh thu"));
-                if (!invoiceRevenueFolder.exists()) invoiceRevenueFolder.mkdirs();
+                File totalRevenueFolder = new File(serviceRevenueFolder, "//Tổng danh thu");
+                if (!totalRevenueFolder.exists()) totalRevenueFolder.mkdirs();
 
-                InvoiceDisplayOnTable instance = tableView.getItems().getFirst();
+                InvoiceDisplayOnTable invoiceInstance = tableView.getItems().getFirst();
 
                 File saveFolder;
                 String initialFileName;
 
-                if (!forEmployee) {
-                    String employeeName = instance.getEmpName();
-                    File employeeFolder = new File(invoiceRevenueFolder.getPath() + "//Nhân viên//" + employeeName);
+                if(!forEmployee) {
+                    String employeeName = invoiceInstance.getEmpName();
+                    File employeeFolder = new File(totalRevenueFolder.getPath() + "//Nhân viên//" + employeeName);
                     if (!employeeFolder.exists()) employeeFolder.mkdirs();
 
                     saveFolder = new File(employeeFolder.getPath());
@@ -194,7 +294,7 @@ public class ExportFileHelper {
                     initialFileName = employeeName + " - " + InvoiceRevenueStatisticsTabController.allOfYears.getFirst()
                             + " - " + InvoiceRevenueStatisticsTabController.allOfYears.getLast() + "-TDTK-" + LocalDate.now();
                 } else {
-                    saveFolder = new File(invoiceRevenueFolder.getPath());
+                    saveFolder = new File(totalRevenueFolder.getPath());
                     initialFileName = InvoiceRevenueStatisticsTabController.allOfYears.getFirst()
                             + " - " + InvoiceRevenueStatisticsTabController.allOfYears.getLast() + "-TDTK-" + LocalDate.now();
                 }
@@ -206,33 +306,32 @@ public class ExportFileHelper {
 
                 if (userSelection != null) {
                     String filePath = userSelection.getAbsolutePath();
-                    createExcelFile(tableView, filePath, numOfInvoice, totalMoney);
+                    createInvoiceExcelFile(tableView, filePath, numOfInvoice, totalMoney);
                     openExcelFile(filePath);
                 } else {
                     System.out.println("No file selected.");
                 }
             }
             case ExportExcelCategory.ALL_OF_YEAR -> {
-                InvoiceDisplayOnTable instance = tableView.getItems().getFirst();
-                String year = String.valueOf(instance.getCreateDate().getYear());
+                InvoiceDisplayOnTable serviceInstance = tableView.getItems().getFirst();
+                String year = String.valueOf(serviceInstance.getCreateDate().getYear());
 
-                File yearFolder = new File(directoryFile.getPath() + "//" + year);
+                File yearFolder = new File(serviceRevenueFolder.getPath() + "//" + year + "//Cả năm");
                 if (!yearFolder.exists()) yearFolder.mkdirs();
 
                 File saveFolder;
                 String initialFileName;
 
                 if (!forEmployee) {
-                    String employeeName = instance.getEmpName();
+                    String employeeName = serviceInstance.getEmpName();
                     File employeeFolder = new File(yearFolder.getPath() + "//Nhân viên//" + employeeName);
                     if (!employeeFolder.exists()) employeeFolder.mkdirs();
 
-                    saveFolder = new File(employeeFolder.getPath() + "//Cả năm");
-                    if (!saveFolder.exists()) saveFolder.mkdirs();
+                    saveFolder = new File(employeeFolder.getPath());
 
                     initialFileName = employeeName + " - " + year + "-TDTK-" + LocalDate.now();
                 } else {
-                    saveFolder = new File(yearFolder.getPath() + "//Cả năm");
+                    saveFolder = new File(yearFolder.getPath());
                     if (!saveFolder.exists()) saveFolder.mkdirs();
 
                     initialFileName = year + "-TDTK-" + LocalDate.now();
@@ -245,48 +344,54 @@ public class ExportFileHelper {
 
                 if (userSelection != null) {
                     String filePath = userSelection.getAbsolutePath();
-                    createExcelFile(tableView, filePath, numOfInvoice, totalMoney);
+                    createInvoiceExcelFile(tableView, filePath, numOfInvoice, totalMoney);
                     openExcelFile(filePath);
                 } else {
                     System.out.println("No file selected.");
                 }
             }
             case ExportExcelCategory.ALL_OF_MONTH -> {
-                InvoiceDisplayOnTable invoiceInstance = tableView.getItems().getFirst();
-                String year = String.valueOf(invoiceInstance.getCreateDate().getYear());
-                String month = invoiceInstance.getCreateDate().getMonth().toString();
+                InvoiceDisplayOnTable serviceInstance = tableView.getItems().getFirst();
+                String year = String.valueOf(serviceInstance.getCreateDate().getYear());
+                String month = serviceInstance.getCreateDate().getMonth().toString();
 
-                File yearFolder = new File(directoryFile, year);
+                File yearFolder = new File(serviceRevenueFolder, year);
                 if (!yearFolder.exists()) yearFolder.mkdirs();
 
+                File saveFolder;
+                String initialFileName;
+
                 if (!forEmployee) {
-                    String employeeName = invoiceInstance.getEmpName();
-                    File employeeFolder = new File(yearFolder, "Nhân viên/" + employeeName + "/" + Month.valueOf(month).getName());
+                    String employeeName = serviceInstance.getEmpName();
+                    File employeeFolder = new File(yearFolder, Month.valueOf(month).getName() + "/Nhân viên/" + employeeName);
                     if (!employeeFolder.exists()) employeeFolder.mkdirs();
 
-                    fileChooser.setInitialDirectory(employeeFolder);
-                    fileChooser.setInitialFileName(employeeName + " - " + Month.valueOf(month).getName() + "-TDTK-" + LocalDate.now() + ".xlsx");
+                    saveFolder = new File(employeeFolder.getPath());
+                    initialFileName = employeeName + " - " + Month.valueOf(month).getName() + "-TDTK-" + LocalDate.now() + ".xlsx";
                 } else {
                     File monthFolder = new File(yearFolder, Month.valueOf(month).getName());
                     if (!monthFolder.exists()) monthFolder.mkdirs();
 
-                    fileChooser.setInitialDirectory(monthFolder);
-                    fileChooser.setInitialFileName(Month.valueOf(month).getName() + "-" + year + "-TDTK-" + LocalDate.now() + ".xlsx");
+                    saveFolder = new File(monthFolder.getPath());
+                    initialFileName = Month.valueOf(month).getName() + "-" + year + "-TDTK-" + LocalDate.now() + ".xlsx";
                 }
+
+                fileChooser.setInitialDirectory(saveFolder);
+                fileChooser.setInitialFileName(initialFileName);
 
                 File userSelection = fileChooser.showSaveDialog(null);
                 if (userSelection != null) {
                     String filePath = userSelection.getAbsolutePath();
-                    createExcelFile(tableView, filePath, numOfInvoice, totalMoney);
+                    createInvoiceExcelFile(tableView, filePath, numOfInvoice, totalMoney);
                     openExcelFile(filePath);
                 } else {
                     System.out.println("No file selected.");
                 }
             }
             case ExportExcelCategory.QUARTER -> {
-                InvoiceDisplayOnTable invoiceInstance = tableView.getItems().getFirst();
-                String year = String.valueOf(invoiceInstance.getCreateDate().getYear());
-                int month = invoiceInstance.getCreateDate().getMonthValue();
+                InvoiceDisplayOnTable serviceInstance = tableView.getItems().getFirst();
+                String year = String.valueOf(serviceInstance.getCreateDate().getYear());
+                int month = serviceInstance.getCreateDate().getMonthValue();
                 String quarter;
 
                 if(QuarterChecker.FIRST_QUATER.contains(month)) quarter = "Quý 1";
@@ -294,123 +399,905 @@ public class ExportFileHelper {
                 else if(QuarterChecker.THIRD_QUATER.contains(month)) quarter = "Quý 3";
                 else quarter = "Quý 4";
 
-                File yearFolder = new File(directoryFile, year);
+                File yearFolder = new File(serviceRevenueFolder, year);
                 if (!yearFolder.exists()) yearFolder.mkdirs();
 
+                File saveFolder;
+                String initialFileName;
+
                 if (!forEmployee) {
-                    String employeeName = invoiceInstance.getEmpName();
-                    File employeeFolder = new File(yearFolder, "Nhân viên/" + employeeName + "/" + quarter);
+                    String employeeName = serviceInstance.getEmpName();
+                    File employeeFolder = new File(yearFolder, quarter + "/Nhân viên/" + employeeName);
                     if (!employeeFolder.exists()) employeeFolder.mkdirs();
 
-                    fileChooser.setInitialDirectory(employeeFolder);
-                    fileChooser.setInitialFileName(employeeName + " - " + quarter + "-TDTK-" + LocalDate.now() + ".xlsx");
+                    saveFolder = new File(employeeFolder.getPath());
+                    initialFileName = employeeName + " - " + quarter + "-TDTK-" + LocalDate.now() + ".xlsx";
                 } else {
                     File quarterFolder = new File(yearFolder, quarter);
                     if (!quarterFolder.exists()) quarterFolder.mkdirs();
 
-                    fileChooser.setInitialDirectory(quarterFolder);
-                    fileChooser.setInitialFileName(quarter + "-" + year + "-TDTK-" + LocalDate.now() + ".xlsx");
+                    saveFolder = new File(quarterFolder.getPath());
+                    initialFileName = quarter + "-" + year + "-TDTK-" + LocalDate.now() + ".xlsx";
                 }
+
+                fileChooser.setInitialDirectory(saveFolder);
+                fileChooser.setInitialFileName(initialFileName);
 
                 File userSelection = fileChooser.showSaveDialog(null);
                 if (userSelection != null) {
                     String filePath = userSelection.getAbsolutePath();
-                    createExcelFile(tableView, filePath, numOfInvoice, totalMoney);
+                    createInvoiceExcelFile(tableView, filePath, numOfInvoice, totalMoney);
                     openExcelFile(filePath);
                 } else {
                     System.out.println("No file selected.");
                 }
             }
             case ExportExcelCategory.DAY_OF_MONTH -> {
-                InvoiceDisplayOnTable invoiceInstance = tableView.getItems().getFirst();
-                String year = String.valueOf(invoiceInstance.getCreateDate().getYear());
-                String month = invoiceInstance.getCreateDate().getMonth().toString();
-                String day = String.valueOf(invoiceInstance.getCreateDate().getDayOfMonth());
+                InvoiceDisplayOnTable serviceInstance = tableView.getItems().getFirst();
+                String year = String.valueOf(serviceInstance.getCreateDate().getYear());
+                String month = serviceInstance.getCreateDate().getMonth().toString();
+                String day = String.valueOf(serviceInstance.getCreateDate().getDayOfMonth());
 
-                File yearFolder = new File(directoryFile, year);
+                File yearFolder = new File(serviceRevenueFolder, year);
                 if (!yearFolder.exists()) yearFolder.mkdirs();
 
+                File saveFolder;
+                String initialFileName;
+
                 if (!forEmployee) {
-                    String employeeName = invoiceInstance.getEmpName();
-                    File dayFolder = new File(yearFolder, "Nhân viên/" + employeeName + "/" + Month.valueOf(month).getName() + "/Ngay " + day);
+                    String employeeName = serviceInstance.getEmpName();
+                    File dayFolder = new File(yearFolder, Month.valueOf(month).getName()
+                            + "/Ngày " + day
+                            + "/Nhân viên/" + employeeName + "/");
                     if (!dayFolder.exists()) dayFolder.mkdirs();
 
-                    fileChooser.setInitialDirectory(dayFolder);
-                    fileChooser.setInitialFileName(employeeName + " - TDTK-" + LocalDate.now() + ".xlsx");
+                    saveFolder = new File(dayFolder.getPath());
+                    initialFileName = employeeName + " - TDTK-" + LocalDate.now() + ".xlsx";
                 } else {
-                    File dayFolder = new File(yearFolder, Month.valueOf(month).getName() + "/Ngay " + day);
+                    File dayFolder = new File(yearFolder, Month.valueOf(month).getName() + "/Ngày " + day);
                     if (!dayFolder.exists()) dayFolder.mkdirs();
 
-                    fileChooser.setInitialDirectory(dayFolder);
-                    fileChooser.setInitialFileName(day + "-" + year + "-TDTK-" + LocalDate.now() + ".xlsx");
+                    saveFolder = new File(dayFolder.getPath());
+                    initialFileName = day + "-" + serviceInstance.getCreateDate().getMonth().getValue() + "-" + year + "-TDTK-" + LocalDate.now() + ".xlsx";
                 }
+
+                fileChooser.setInitialDirectory(saveFolder);
+                fileChooser.setInitialFileName(initialFileName);
 
                 File userSelection = fileChooser.showSaveDialog(null);
                 if (userSelection != null) {
                     String filePath = userSelection.getAbsolutePath();
-                    createExcelFile(tableView, filePath, numOfInvoice, totalMoney);
+                    createInvoiceExcelFile(tableView, filePath, numOfInvoice, totalMoney);
                     openExcelFile(filePath);
                 } else {
                     System.out.println("No file selected.");
                 }
             }
             case ExportExcelCategory.MANY_YEAR -> {
-                InvoiceDisplayOnTable invoiceInstance = tableView.getItems().getFirst();
+                InvoiceDisplayOnTable serviceInstance = tableView.getItems().getFirst();
                 String fromYear = String.valueOf(date.getStartDate().getYear());
                 String toYear = String.valueOf(date.getEndDate().getYear());
 
-                File yearFolder = new File(directoryFile, fromYear + "-" + toYear);
+                String employeeName = serviceInstance.getEmpName();
+
+                File yearFolder = new File(serviceRevenueFolder, fromYear + "-" + toYear);
                 if (!yearFolder.exists()) yearFolder.mkdirs();
 
+                File saveFolder;
+                String initialFileName;
+
                 if (!forEmployee) {
-                    String employeeName = invoiceInstance.getEmpName();
-                    File dateRangeFolder = new File(yearFolder, "Nhân viên/" + employeeName + "/" + date.getStartDate() + " đến " + date.getEndDate());
+                    File dateRangeFolder = new File(yearFolder,
+                            date.getStartDate() + " đến " + date.getEndDate()
+                                    + "/Nhân viên/" + employeeName);
                     if (!dateRangeFolder.exists()) dateRangeFolder.mkdirs();
 
-                    fileChooser.setInitialDirectory(dateRangeFolder);
-                    fileChooser.setInitialFileName(employeeName + " - TDTK-" + LocalDate.now() + ".xlsx");
+                    saveFolder = new File(dateRangeFolder.getPath());
+                    initialFileName = employeeName + " - TDTK-" + LocalDate.now() + ".xlsx";
                 } else {
                     File dateRangeFolder = new File(yearFolder, date.getStartDate() + " đến " + date.getEndDate());
                     if (!dateRangeFolder.exists()) dateRangeFolder.mkdirs();
 
-                    fileChooser.setInitialDirectory(dateRangeFolder);
-                    fileChooser.setInitialFileName(date.getStartDate() + " đến " + date.getEndDate() + "-TDTK-" + LocalDate.now() + ".xlsx");
+                    saveFolder = new File(dateRangeFolder.getPath());
+                    initialFileName = date.getStartDate() + " đến " + date.getEndDate()
+                            + "-TDTK-" + LocalDate.now() + ".xlsx";
                 }
+
+                fileChooser.setInitialDirectory(saveFolder);
+                fileChooser.setInitialFileName(initialFileName);
 
                 File userSelection = fileChooser.showSaveDialog(null);
                 if (userSelection != null) {
                     String filePath = userSelection.getAbsolutePath();
-                    createExcelFile(tableView, filePath, numOfInvoice, totalMoney);
+                    createInvoiceExcelFile(tableView, filePath, numOfInvoice, totalMoney);
                     openExcelFile(filePath);
                 } else {
                     System.out.println("No file selected.");
                 }
             }
             case ExportExcelCategory.DATE_RANGE -> {
-                InvoiceDisplayOnTable invoiceInstance = tableView.getItems().get(0);
+                InvoiceDisplayOnTable serviceInstance = tableView.getItems().getFirst();
                 String year = String.valueOf(date.getStartDate().getYear());
-                File yearFolder = new File(directoryFile, year);
+
+                String employeeName = serviceInstance.getEmpName();
+
+                File yearFolder = new File(serviceRevenueFolder, year);
                 if (!yearFolder.exists()) yearFolder.mkdirs();
 
+                File saveFolder;
+                String initialFileName;
+
                 if (!forEmployee) {
-                    String employeeName = invoiceInstance.getEmpName();
-                    File dateRangeFolder = new File(yearFolder, "Nhân viên/" + employeeName + "/" + date.getStartDate() + " đến " + date.getEndDate());
+                    File dateRangeFolder = new File(yearFolder,
+                            date.getStartDate() + " đến " + date.getEndDate()
+                                    + "/Nhân viên/" + employeeName);
                     if (!dateRangeFolder.exists()) dateRangeFolder.mkdirs();
 
-                    fileChooser.setInitialDirectory(dateRangeFolder);
-                    fileChooser.setInitialFileName(employeeName + " - TDTK-" + LocalDate.now() + ".xlsx");
+                    saveFolder = new File(dateRangeFolder.getPath());
+                    initialFileName = employeeName + " - TDTK-" + LocalDate.now() + ".xlsx";
                 } else {
                     File dateRangeFolder = new File(yearFolder, date.getStartDate() + " đến " + date.getEndDate());
                     if (!dateRangeFolder.exists()) dateRangeFolder.mkdirs();
 
-                    fileChooser.setInitialDirectory(dateRangeFolder);
-                    fileChooser.setInitialFileName(date.getStartDate() + " đến " + date.getEndDate() + "-TDTK-" + LocalDate.now() + ".xlsx");
+                    saveFolder = new File(dateRangeFolder.getPath());
+                    initialFileName = date.getStartDate() + " đến " + date.getEndDate()
+                            + "-TDTK-" + LocalDate.now() + ".xlsx";
                 }
+
+                fileChooser.setInitialDirectory(saveFolder);
+                fileChooser.setInitialFileName(initialFileName);
 
                 File userSelection = fileChooser.showSaveDialog(null);
                 if (userSelection != null) {
                     String filePath = userSelection.getAbsolutePath();
-                    createExcelFile(tableView, filePath, numOfInvoice, totalMoney);
+                    createInvoiceExcelFile(tableView, filePath, numOfInvoice, totalMoney);
+                    openExcelFile(filePath);
+                } else {
+                    System.out.println("No file selected.");
+                }
+            }
+            default -> {
+                System.out.println("errors");
+            }
+        }
+    }
+
+    public static void exportServiceExcelFile(TableView<ServiceDisplayOnTable> tableView, ExportExcelCategory type, boolean forEmployee, boolean forService, DateRange date, int numOfInvoice, double totalMoney) throws IOException {
+        FileChooser fileChooser = new FileChooser();
+        File directoryFile = new File(DATA_LOCATED);
+        if (!directoryFile.exists()) directoryFile.mkdirs();
+
+        fileChooser.setTitle("Save Excel File");
+        fileChooser.getExtensionFilters().addAll(
+                new FileChooser.ExtensionFilter("Excel Files", "*.xlsx"),
+                new FileChooser.ExtensionFilter("All Files", "*.*")
+        );
+
+        File serviceRevenueFolder = new File(DATA_LOCATED.concat("//Doanh thu dịch vụ"));
+        if (!serviceRevenueFolder.exists()) serviceRevenueFolder.mkdirs();
+
+        switch (type){
+            case ExportExcelCategory.ALL_OF_TIME -> {
+                File totalRevenueFolder = new File(serviceRevenueFolder, "//Tổng danh thu");
+                if (!totalRevenueFolder.exists()) totalRevenueFolder.mkdirs();
+                ServiceDisplayOnTable serviceInstance = tableView.getItems().getFirst();
+
+                File saveFolder;
+                String initialFileName;
+
+                if (!forService) {
+                    String employeeName = serviceInstance.getEmployeeName();
+                    String serviceValue = serviceInstance.getServiceCategory();
+                    File serviceCategoryFolder;
+                    if(!forEmployee){
+                        serviceCategoryFolder = new File(totalRevenueFolder.getPath() + "//Loại dịch vụ//" + serviceValue + "//Nhân viên//" + employeeName);
+                        initialFileName = serviceValue + " - " + employeeName + " - " + ServiceRevenueStatisticsTabController.allOfYears.getFirst()
+                                + " - " + ServiceRevenueStatisticsTabController.allOfYears.getLast() + "-TDTK-" + LocalDate.now();
+                    }
+
+                    else{
+                        serviceCategoryFolder = new File(totalRevenueFolder.getPath() + "//Loại dịch vụ//" + serviceValue);
+                        initialFileName = serviceValue + " - " + ServiceRevenueStatisticsTabController.allOfYears.getFirst()
+                                + " - " + ServiceRevenueStatisticsTabController.allOfYears.getLast() + "-TDTK-" + LocalDate.now();
+                    }
+
+                    if (!serviceCategoryFolder.exists()) serviceCategoryFolder.mkdirs();
+
+                    saveFolder = new File(serviceCategoryFolder.getPath());
+                } else if(!forEmployee) {
+                    String employeeName = serviceInstance.getEmployeeName();
+                    File employeeFolder = new File(totalRevenueFolder.getPath() + "//Nhân viên//" + employeeName);
+                    if (!employeeFolder.exists()) employeeFolder.mkdirs();
+
+                    saveFolder = new File(employeeFolder.getPath());
+
+                    initialFileName = employeeName + " - " + ServiceRevenueStatisticsTabController.allOfYears.getFirst()
+                            + " - " + ServiceRevenueStatisticsTabController.allOfYears.getLast() + "-TDTK-" + LocalDate.now();
+                } else {
+                    saveFolder = new File(totalRevenueFolder.getPath());
+                    initialFileName = ServiceRevenueStatisticsTabController.allOfYears.getFirst()
+                            + " - " + ServiceRevenueStatisticsTabController.allOfYears.getLast() + "-TDTK-" + LocalDate.now();
+                }
+
+                fileChooser.setInitialDirectory(saveFolder);
+                fileChooser.setInitialFileName(initialFileName);
+
+                File userSelection = fileChooser.showSaveDialog(null);
+
+                if (userSelection != null) {
+                    String filePath = userSelection.getAbsolutePath();
+                    createServiceExcelFile(tableView, filePath, numOfInvoice, totalMoney);
+                    openExcelFile(filePath);
+                } else {
+                    System.out.println("No file selected.");
+                }
+            }
+            case ExportExcelCategory.ALL_OF_YEAR -> {
+                ServiceDisplayOnTable serviceInstance = tableView.getItems().getFirst();
+                String year = String.valueOf(serviceInstance.getDateAdded().getYear());
+
+                File yearFolder = new File(serviceRevenueFolder.getPath() + "//" + year + "//Cả năm");
+                if (!yearFolder.exists()) yearFolder.mkdirs();
+
+                File saveFolder;
+                String initialFileName;
+
+                if (!forService) {
+                    String employeeName = serviceInstance.getEmployeeName();
+                    String serviceValue = serviceInstance.getServiceCategory();
+                    File serviceCategoryFolder;
+                    if (!forEmployee) {
+                        serviceCategoryFolder = new File(yearFolder.getPath() + "//Loại dịch vụ//" + serviceValue + "//Nhân viên//" + employeeName);
+                        initialFileName = serviceValue + " - " + employeeName + "-TDTK-" + LocalDate.now();
+                    } else {
+                        serviceCategoryFolder = new File(yearFolder.getPath() + "//Loại dịch vụ//" + serviceValue);
+                        initialFileName = serviceValue + "-TDTK-" + LocalDate.now();
+                    }
+
+                    if (!serviceCategoryFolder.exists()) serviceCategoryFolder.mkdirs();
+
+                    saveFolder = new File(serviceCategoryFolder.getPath());
+                } else if (!forEmployee) {
+                    String employeeName = serviceInstance.getEmployeeName();
+                    File employeeFolder = new File(yearFolder.getPath() + "//Nhân viên//" + employeeName);
+                    if (!employeeFolder.exists()) employeeFolder.mkdirs();
+
+                    saveFolder = new File(employeeFolder.getPath());
+
+                    initialFileName = employeeName + " - " + year + "-TDTK-" + LocalDate.now();
+                } else {
+                    saveFolder = new File(yearFolder.getPath());
+                    if (!saveFolder.exists()) saveFolder.mkdirs();
+
+                    initialFileName = year + "-TDTK-" + LocalDate.now();
+                }
+
+                fileChooser.setInitialDirectory(saveFolder);
+                fileChooser.setInitialFileName(initialFileName);
+
+                File userSelection = fileChooser.showSaveDialog(null);
+
+                if (userSelection != null) {
+                    String filePath = userSelection.getAbsolutePath();
+                    createServiceExcelFile(tableView, filePath, numOfInvoice, totalMoney);
+                    openExcelFile(filePath);
+                } else {
+                    System.out.println("No file selected.");
+                }
+            }
+            case ExportExcelCategory.ALL_OF_MONTH -> {
+                ServiceDisplayOnTable serviceInstance = tableView.getItems().getFirst();
+                String year = String.valueOf(serviceInstance.getDateAdded().getYear());
+                String month = serviceInstance.getDateAdded().getMonth().toString();
+
+                File yearFolder = new File(serviceRevenueFolder, year);
+                if (!yearFolder.exists()) yearFolder.mkdirs();
+
+                File saveFolder;
+                String initialFileName;
+
+                if (!forService) {
+                    String employeeName = serviceInstance.getEmployeeName();
+                    String serviceValue = serviceInstance.getServiceCategory();
+                    File serviceCategoryFolder;
+                    if (!forEmployee) {
+                        serviceCategoryFolder = new File(yearFolder.getPath() + "//"
+                                + Month.valueOf(month).getName()
+                                + "//Loại dịch vụ//"
+                                + serviceValue
+                                + "//Nhân viên//"
+                                + employeeName);
+                        initialFileName = serviceValue + " - " + employeeName + "-TDTK-" + LocalDate.now();
+                    } else {
+                        serviceCategoryFolder = new File(yearFolder.getPath() + "//"
+                                + Month.valueOf(month).getName()
+                                + "//Loại dịch vụ//"
+                                + serviceValue);
+                        initialFileName = serviceValue + "-TDTK-" + LocalDate.now();
+                    }
+                    if (!serviceCategoryFolder.exists()) serviceCategoryFolder.mkdirs();
+
+                    saveFolder = new File(serviceCategoryFolder.getPath());
+                } else if (!forEmployee) {
+                    String employeeName = serviceInstance.getEmployeeName();
+                    File employeeFolder = new File(yearFolder, Month.valueOf(month).getName() + "/Nhân viên/" + employeeName);
+                    if (!employeeFolder.exists()) employeeFolder.mkdirs();
+
+                    saveFolder = new File(employeeFolder.getPath());
+                    initialFileName = employeeName + " - " + Month.valueOf(month).getName() + "-TDTK-" + LocalDate.now() + ".xlsx";
+                } else {
+                    File monthFolder = new File(yearFolder, Month.valueOf(month).getName());
+                    if (!monthFolder.exists()) monthFolder.mkdirs();
+
+                    saveFolder = new File(monthFolder.getPath());
+                    initialFileName = Month.valueOf(month).getName() + "-" + year + "-TDTK-" + LocalDate.now() + ".xlsx";
+                }
+
+                fileChooser.setInitialDirectory(saveFolder);
+                fileChooser.setInitialFileName(initialFileName);
+
+                File userSelection = fileChooser.showSaveDialog(null);
+                if (userSelection != null) {
+                    String filePath = userSelection.getAbsolutePath();
+                    createServiceExcelFile(tableView, filePath, numOfInvoice, totalMoney);
+                    openExcelFile(filePath);
+                } else {
+                    System.out.println("No file selected.");
+                }
+            }
+            case ExportExcelCategory.QUARTER -> {
+                ServiceDisplayOnTable serviceInstance = tableView.getItems().getFirst();
+                String year = String.valueOf(serviceInstance.getDateAdded().getYear());
+                int month = serviceInstance.getDateAdded().getMonthValue();
+                String quarter;
+
+                if(QuarterChecker.FIRST_QUATER.contains(month)) quarter = "Quý 1";
+                else if(QuarterChecker.SECOND_QUATER.contains(month)) quarter = "Quý 2";
+                else if(QuarterChecker.THIRD_QUATER.contains(month)) quarter = "Quý 3";
+                else quarter = "Quý 4";
+
+                File yearFolder = new File(serviceRevenueFolder, year);
+                if (!yearFolder.exists()) yearFolder.mkdirs();
+
+                File saveFolder;
+                String initialFileName;
+
+                if (!forService) {
+                    String employeeName = serviceInstance.getEmployeeName();
+                    String serviceValue = serviceInstance.getServiceCategory();
+                    File serviceCategoryFolder;
+                    if (!forEmployee) {
+                        serviceCategoryFolder = new File(yearFolder.getPath() + "//"
+                                + quarter
+                                + "//Loại dịch vụ//"
+                                + serviceValue
+                                + "//Nhân viên//"
+                                + employeeName);
+                        initialFileName = serviceValue + "-"
+                                + employeeName + " - "
+                                + quarter + "-TDTK-"
+                                + LocalDate.now() + ".xlsx";
+                    } else {
+                        serviceCategoryFolder = new File(yearFolder.getPath() + "//"
+                                + quarter
+                                + "//Loại dịch vụ//"
+                                + serviceValue);
+                        initialFileName = serviceValue + "-"
+                                + quarter + "-TDTK-"
+                                + LocalDate.now() + ".xlsx";
+                    }
+                    if (!serviceCategoryFolder.exists()) serviceCategoryFolder.mkdirs();
+
+                    saveFolder = new File(serviceCategoryFolder.getPath());
+                } else if (!forEmployee) {
+                    String employeeName = serviceInstance.getEmployeeName();
+                    File employeeFolder = new File(yearFolder, quarter + "/Nhân viên/" + employeeName);
+                    if (!employeeFolder.exists()) employeeFolder.mkdirs();
+
+                    saveFolder = new File(employeeFolder.getPath());
+                    initialFileName = employeeName + " - " + quarter + "-TDTK-" + LocalDate.now() + ".xlsx";
+                } else {
+                    File quarterFolder = new File(yearFolder, quarter);
+                    if (!quarterFolder.exists()) quarterFolder.mkdirs();
+
+                    saveFolder = new File(quarterFolder.getPath());
+                    initialFileName = quarter + "-" + year + "-TDTK-" + LocalDate.now() + ".xlsx";
+                }
+
+                fileChooser.setInitialDirectory(saveFolder);
+                fileChooser.setInitialFileName(initialFileName);
+
+                File userSelection = fileChooser.showSaveDialog(null);
+                if (userSelection != null) {
+                    String filePath = userSelection.getAbsolutePath();
+                    createServiceExcelFile(tableView, filePath, numOfInvoice, totalMoney);
+                    openExcelFile(filePath);
+                } else {
+                    System.out.println("No file selected.");
+                }
+            }
+            case ExportExcelCategory.DAY_OF_MONTH -> {
+                ServiceDisplayOnTable serviceInstance = tableView.getItems().getFirst();
+                String year = String.valueOf(serviceInstance.getDateAdded().getYear());
+                String month = serviceInstance.getDateAdded().getMonth().toString();
+                String day = String.valueOf(serviceInstance.getDateAdded().getDayOfMonth());
+
+                File yearFolder = new File(serviceRevenueFolder, year);
+                if (!yearFolder.exists()) yearFolder.mkdirs();
+
+                File saveFolder;
+                String initialFileName;
+
+                if (!forService) {
+                    String employeeName = serviceInstance.getEmployeeName();
+                    String serviceValue = serviceInstance.getServiceCategory();
+                    File serviceCategoryFolder;
+                    if (!forEmployee) {
+                        serviceCategoryFolder = new File(yearFolder.getPath() + "//"
+                                + Month.valueOf(month).getName()
+                                + "/Ngày " + day
+                                + "//Loại dịch vụ//"
+                                + serviceValue
+                                + "//Nhân viên//"
+                                + employeeName);
+                        initialFileName = serviceValue + " - " + employeeName + "-TDTK-" + LocalDate.now();
+                    } else {
+                        serviceCategoryFolder = new File(yearFolder.getPath() + "//"
+                                + Month.valueOf(month).getName()
+                                + "/Ngày " + day
+                                + "//Loại dịch vụ//"
+                                + serviceValue);
+                        initialFileName = serviceValue + "-TDTK-" + LocalDate.now();
+                    }
+                    if (!serviceCategoryFolder.exists()) serviceCategoryFolder.mkdirs();
+
+                    saveFolder = new File(serviceCategoryFolder.getPath());
+                } else if (!forEmployee) {
+                    String employeeName = serviceInstance.getEmployeeName();
+                    File dayFolder = new File(yearFolder, Month.valueOf(month).getName()
+                            + "/Ngày " + day
+                            + "/Nhân viên/" + employeeName + "/");
+                    if (!dayFolder.exists()) dayFolder.mkdirs();
+
+                    saveFolder = new File(dayFolder.getPath());
+                    initialFileName = employeeName + " - TDTK-" + LocalDate.now() + ".xlsx";
+                } else {
+                    File dayFolder = new File(yearFolder, Month.valueOf(month).getName() + "/Ngày " + day);
+                    if (!dayFolder.exists()) dayFolder.mkdirs();
+
+                    saveFolder = new File(dayFolder.getPath());
+                    initialFileName = day + "-" + serviceInstance.getDateAdded().getMonth().getValue() + "-" + year + "-TDTK-" + LocalDate.now() + ".xlsx";
+                }
+
+                fileChooser.setInitialDirectory(saveFolder);
+                fileChooser.setInitialFileName(initialFileName);
+
+                File userSelection = fileChooser.showSaveDialog(null);
+                if (userSelection != null) {
+                    String filePath = userSelection.getAbsolutePath();
+                    createServiceExcelFile(tableView, filePath, numOfInvoice, totalMoney);
+                    openExcelFile(filePath);
+                } else {
+                    System.out.println("No file selected.");
+                }
+            }
+            case ExportExcelCategory.MANY_YEAR -> {
+                ServiceDisplayOnTable serviceInstance = tableView.getItems().getFirst();
+                String fromYear = String.valueOf(date.getStartDate().getYear());
+                String toYear = String.valueOf(date.getEndDate().getYear());
+
+                String employeeName = serviceInstance.getEmployeeName();
+
+                File yearFolder = new File(serviceRevenueFolder, fromYear + "-" + toYear);
+                if (!yearFolder.exists()) yearFolder.mkdirs();
+
+                File saveFolder;
+                String initialFileName;
+
+                if (!forService) {
+                    String serviceValue = serviceInstance.getServiceCategory();
+                    File serviceCategoryFolder;
+                    if (!forEmployee) {
+                        serviceCategoryFolder = new File(yearFolder.getPath(),
+                                date.getStartDate() + " đến " + date.getEndDate()
+                                + "//Loại dịch vụ//" + serviceValue
+                                + "//Nhân viên//" + employeeName);
+                        initialFileName = serviceValue + " - " + employeeName + "-TDTK-" + LocalDate.now();
+                    } else {
+                        serviceCategoryFolder = new File(yearFolder.getPath(),
+                                date.getStartDate() + " đến " + date.getEndDate()
+                                + "//Loại dịch vụ//" + serviceValue);
+                        initialFileName = serviceValue + "-TDTK-" + LocalDate.now();
+                    }
+
+                    if (!serviceCategoryFolder.exists()) serviceCategoryFolder.mkdirs();
+
+                    saveFolder = new File(serviceCategoryFolder.getPath());
+                } else if (!forEmployee) {
+                    File dateRangeFolder = new File(yearFolder,
+                            date.getStartDate() + " đến " + date.getEndDate()
+                                    + "/Nhân viên/" + employeeName);
+                    if (!dateRangeFolder.exists()) dateRangeFolder.mkdirs();
+
+                    saveFolder = new File(dateRangeFolder.getPath());
+                    initialFileName = employeeName + " - TDTK-" + LocalDate.now() + ".xlsx";
+                } else {
+                    File dateRangeFolder = new File(yearFolder, date.getStartDate() + " đến " + date.getEndDate());
+                    if (!dateRangeFolder.exists()) dateRangeFolder.mkdirs();
+
+                    saveFolder = new File(dateRangeFolder.getPath());
+                    initialFileName = date.getStartDate() + " đến " + date.getEndDate()
+                            + "-TDTK-" + LocalDate.now() + ".xlsx";
+                }
+
+                fileChooser.setInitialDirectory(saveFolder);
+                fileChooser.setInitialFileName(initialFileName);
+
+                File userSelection = fileChooser.showSaveDialog(null);
+                if (userSelection != null) {
+                    String filePath = userSelection.getAbsolutePath();
+                    createServiceExcelFile(tableView, filePath, numOfInvoice, totalMoney);
+                    openExcelFile(filePath);
+                } else {
+                    System.out.println("No file selected.");
+                }
+            }
+            case ExportExcelCategory.DATE_RANGE -> {
+                ServiceDisplayOnTable serviceInstance = tableView.getItems().getFirst();
+                String year = String.valueOf(date.getStartDate().getYear());
+
+                String employeeName = serviceInstance.getEmployeeName();
+
+                File yearFolder = new File(serviceRevenueFolder, year);
+                if (!yearFolder.exists()) yearFolder.mkdirs();
+
+                File saveFolder;
+                String initialFileName;
+
+                if (!forService) {
+                    String serviceValue = serviceInstance.getServiceCategory();
+                    File serviceCategoryFolder;
+                    if (!forEmployee) {
+                        serviceCategoryFolder = new File(yearFolder.getPath(),
+                                date.getStartDate() + " đến " + date.getEndDate()
+                                        + "//Loại dịch vụ//" + serviceValue
+                                        + "//Nhân viên//" + employeeName);
+                        initialFileName = serviceValue + " - " + employeeName + "-TDTK-" + LocalDate.now();
+                    } else {
+                        serviceCategoryFolder = new File(yearFolder.getPath(),
+                                date.getStartDate() + " đến " + date.getEndDate()
+                                        + "//Loại dịch vụ//" + serviceValue);
+                        initialFileName = serviceValue + "-TDTK-" + LocalDate.now();
+                    }
+
+                    if (!serviceCategoryFolder.exists()) serviceCategoryFolder.mkdirs();
+
+                    saveFolder = new File(serviceCategoryFolder.getPath());
+                } else if (!forEmployee) {
+                    File dateRangeFolder = new File(yearFolder,
+                            date.getStartDate() + " đến " + date.getEndDate()
+                                    + "/Nhân viên/" + employeeName);
+                    if (!dateRangeFolder.exists()) dateRangeFolder.mkdirs();
+
+                    saveFolder = new File(dateRangeFolder.getPath());
+                    initialFileName = employeeName + " - TDTK-" + LocalDate.now() + ".xlsx";
+                } else {
+                    File dateRangeFolder = new File(yearFolder, date.getStartDate() + " đến " + date.getEndDate());
+                    if (!dateRangeFolder.exists()) dateRangeFolder.mkdirs();
+
+                    saveFolder = new File(dateRangeFolder.getPath());
+                    initialFileName = date.getStartDate() + " đến " + date.getEndDate()
+                            + "-TDTK-" + LocalDate.now() + ".xlsx";
+                }
+
+                fileChooser.setInitialDirectory(saveFolder);
+                fileChooser.setInitialFileName(initialFileName);
+
+                File userSelection = fileChooser.showSaveDialog(null);
+                if (userSelection != null) {
+                    String filePath = userSelection.getAbsolutePath();
+                    createServiceExcelFile(tableView, filePath, numOfInvoice, totalMoney);
+                    openExcelFile(filePath);
+                } else {
+                    System.out.println("No file selected.");
+                }
+            }
+            default -> {
+                System.out.println("errors");
+            }
+        }
+    }
+
+    public static void exportRoomExcelFile(TableView<RoomDisplayOnTable> tableView, ExportExcelCategory type, boolean forRoomCategory, DateRange date, int numOfInvoice, double totalMoney) throws IOException {
+        FileChooser fileChooser = new FileChooser();
+        File directoryFile = new File(DATA_LOCATED);
+        if (!directoryFile.exists()) directoryFile.mkdirs();
+
+        fileChooser.setTitle("Save Excel File");
+        fileChooser.getExtensionFilters().addAll(
+                new FileChooser.ExtensionFilter("Excel Files", "*.xlsx"),
+                new FileChooser.ExtensionFilter("All Files", "*.*")
+        );
+
+        File serviceRevenueFolder = new File(DATA_LOCATED.concat("//Doanh thu phòng"));
+        if (!serviceRevenueFolder.exists()) serviceRevenueFolder.mkdirs();
+
+        switch (type){
+            case ExportExcelCategory.ALL_OF_TIME -> {
+                File totalRevenueFolder = new File(serviceRevenueFolder, "//Tổng danh thu");
+                if (!totalRevenueFolder.exists()) totalRevenueFolder.mkdirs();
+                RoomDisplayOnTable serviceInstance = tableView.getItems().getFirst();
+
+                File saveFolder;
+                String initialFileName;
+
+                if(!forRoomCategory) {
+                    String employeeName = serviceInstance.getRoomCategory();
+                    File employeeFolder = new File(totalRevenueFolder.getPath() + "//Loại phòng//" + employeeName);
+                    if (!employeeFolder.exists()) employeeFolder.mkdirs();
+
+                    saveFolder = new File(employeeFolder.getPath());
+
+                    initialFileName = employeeName + " - " + RoomRevenueStatisticsTabController.allOfYears.getFirst()
+                            + " - " + RoomRevenueStatisticsTabController.allOfYears.getLast() + "-TDTK-" + LocalDate.now();
+                } else {
+                    saveFolder = new File(totalRevenueFolder.getPath());
+                    initialFileName = RoomRevenueStatisticsTabController.allOfYears.getFirst()
+                            + " - " + RoomRevenueStatisticsTabController.allOfYears.getLast() + "-TDTK-" + LocalDate.now();
+                }
+
+                fileChooser.setInitialDirectory(saveFolder);
+                fileChooser.setInitialFileName(initialFileName);
+
+                File userSelection = fileChooser.showSaveDialog(null);
+
+                if (userSelection != null) {
+                    String filePath = userSelection.getAbsolutePath();
+                    createRoomExcelFile(tableView, filePath, numOfInvoice, totalMoney);
+                    openExcelFile(filePath);
+                } else {
+                    System.out.println("No file selected.");
+                }
+            }
+            case ExportExcelCategory.ALL_OF_YEAR -> {
+                RoomDisplayOnTable serviceInstance = tableView.getItems().getFirst();
+                String year = String.valueOf(serviceInstance.getBookingDate().getYear());
+
+                File yearFolder = new File(serviceRevenueFolder.getPath() + "//" + year + "//Cả năm");
+                if (!yearFolder.exists()) yearFolder.mkdirs();
+
+                File saveFolder;
+                String initialFileName;
+
+                if (!forRoomCategory) {
+                    String employeeName = serviceInstance.getRoomCategory();
+                    File employeeFolder = new File(yearFolder.getPath() + "//Loại phòng//" + employeeName);
+                    if (!employeeFolder.exists()) employeeFolder.mkdirs();
+
+                    saveFolder = new File(employeeFolder.getPath());
+
+                    initialFileName = employeeName + " - " + year + "-TDTK-" + LocalDate.now();
+                } else {
+                    saveFolder = new File(yearFolder.getPath());
+                    if (!saveFolder.exists()) saveFolder.mkdirs();
+
+                    initialFileName = year + "-TDTK-" + LocalDate.now();
+                }
+
+                fileChooser.setInitialDirectory(saveFolder);
+                fileChooser.setInitialFileName(initialFileName);
+
+                File userSelection = fileChooser.showSaveDialog(null);
+
+                if (userSelection != null) {
+                    String filePath = userSelection.getAbsolutePath();
+                    createRoomExcelFile(tableView, filePath, numOfInvoice, totalMoney);
+                    openExcelFile(filePath);
+                } else {
+                    System.out.println("No file selected.");
+                }
+            }
+            case ExportExcelCategory.ALL_OF_MONTH -> {
+                RoomDisplayOnTable serviceInstance = tableView.getItems().getFirst();
+                String year = String.valueOf(serviceInstance.getBookingDate().getYear());
+                String month = serviceInstance.getBookingDate().getMonth().toString();
+
+                File yearFolder = new File(serviceRevenueFolder, year);
+                if (!yearFolder.exists()) yearFolder.mkdirs();
+
+                File saveFolder;
+                String initialFileName;
+
+                if (!forRoomCategory) {
+                    String employeeName = serviceInstance.getRoomCategory();
+                    File employeeFolder = new File(yearFolder, Month.valueOf(month).getName() + "/Loại phòng/" + employeeName);
+                    if (!employeeFolder.exists()) employeeFolder.mkdirs();
+
+                    saveFolder = new File(employeeFolder.getPath());
+                    initialFileName = employeeName + " - " + Month.valueOf(month).getName() + "-TDTK-" + LocalDate.now() + ".xlsx";
+                } else {
+                    File monthFolder = new File(yearFolder, Month.valueOf(month).getName());
+                    if (!monthFolder.exists()) monthFolder.mkdirs();
+
+                    saveFolder = new File(monthFolder.getPath());
+                    initialFileName = Month.valueOf(month).getName() + "-" + year + "-TDTK-" + LocalDate.now() + ".xlsx";
+                }
+
+                fileChooser.setInitialDirectory(saveFolder);
+                fileChooser.setInitialFileName(initialFileName);
+
+                File userSelection = fileChooser.showSaveDialog(null);
+                if (userSelection != null) {
+                    String filePath = userSelection.getAbsolutePath();
+                    createRoomExcelFile(tableView, filePath, numOfInvoice, totalMoney);
+                    openExcelFile(filePath);
+                } else {
+                    System.out.println("No file selected.");
+                }
+            }
+            case ExportExcelCategory.QUARTER -> {
+                RoomDisplayOnTable serviceInstance = tableView.getItems().getFirst();
+                String year = String.valueOf(serviceInstance.getBookingDate().getYear());
+                int month = serviceInstance.getBookingDate().getMonthValue();
+                String quarter;
+
+                if(QuarterChecker.FIRST_QUATER.contains(month)) quarter = "Quý 1";
+                else if(QuarterChecker.SECOND_QUATER.contains(month)) quarter = "Quý 2";
+                else if(QuarterChecker.THIRD_QUATER.contains(month)) quarter = "Quý 3";
+                else quarter = "Quý 4";
+
+                File yearFolder = new File(serviceRevenueFolder, year);
+                if (!yearFolder.exists()) yearFolder.mkdirs();
+
+                File saveFolder;
+                String initialFileName;
+
+                if (!forRoomCategory) {
+                    String employeeName = serviceInstance.getRoomCategory();
+                    File employeeFolder = new File(yearFolder, quarter + "/Loại phòng/" + employeeName);
+                    if (!employeeFolder.exists()) employeeFolder.mkdirs();
+
+                    saveFolder = new File(employeeFolder.getPath());
+                    initialFileName = employeeName + " - " + quarter + "-TDTK-" + LocalDate.now() + ".xlsx";
+                } else {
+                    File quarterFolder = new File(yearFolder, quarter);
+                    if (!quarterFolder.exists()) quarterFolder.mkdirs();
+
+                    saveFolder = new File(quarterFolder.getPath());
+                    initialFileName = quarter + "-" + year + "-TDTK-" + LocalDate.now() + ".xlsx";
+                }
+
+                fileChooser.setInitialDirectory(saveFolder);
+                fileChooser.setInitialFileName(initialFileName);
+
+                File userSelection = fileChooser.showSaveDialog(null);
+                if (userSelection != null) {
+                    String filePath = userSelection.getAbsolutePath();
+                    createRoomExcelFile(tableView, filePath, numOfInvoice, totalMoney);
+                    openExcelFile(filePath);
+                } else {
+                    System.out.println("No file selected.");
+                }
+            }
+            case ExportExcelCategory.DAY_OF_MONTH -> {
+                RoomDisplayOnTable serviceInstance = tableView.getItems().getFirst();
+                String year = String.valueOf(serviceInstance.getBookingDate().getYear());
+                String month = serviceInstance.getBookingDate().getMonth().toString();
+                String day = String.valueOf(serviceInstance.getBookingDate().getDayOfMonth());
+
+                File yearFolder = new File(serviceRevenueFolder, year);
+                if (!yearFolder.exists()) yearFolder.mkdirs();
+
+                File saveFolder;
+                String initialFileName;
+
+                if (!forRoomCategory) {
+                    String employeeName = serviceInstance.getRoomCategory();
+                    File dayFolder = new File(yearFolder, Month.valueOf(month).getName()
+                            + "/Ngày " + day
+                            + "/Loại phòng/" + employeeName + "/");
+                    if (!dayFolder.exists()) dayFolder.mkdirs();
+
+                    saveFolder = new File(dayFolder.getPath());
+                    initialFileName = employeeName + " - TDTK-" + LocalDate.now() + ".xlsx";
+                } else {
+                    File dayFolder = new File(yearFolder, Month.valueOf(month).getName() + "/Ngày " + day);
+                    if (!dayFolder.exists()) dayFolder.mkdirs();
+
+                    saveFolder = new File(dayFolder.getPath());
+                    initialFileName = day + "-" + serviceInstance.getBookingDate().getMonth().getValue() + "-" + year + "-TDTK-" + LocalDate.now() + ".xlsx";
+                }
+
+                fileChooser.setInitialDirectory(saveFolder);
+                fileChooser.setInitialFileName(initialFileName);
+
+                File userSelection = fileChooser.showSaveDialog(null);
+                if (userSelection != null) {
+                    String filePath = userSelection.getAbsolutePath();
+                    createRoomExcelFile(tableView, filePath, numOfInvoice, totalMoney);
+                    openExcelFile(filePath);
+                } else {
+                    System.out.println("No file selected.");
+                }
+            }
+            case ExportExcelCategory.MANY_YEAR -> {
+                RoomDisplayOnTable serviceInstance = tableView.getItems().getFirst();
+                String fromYear = String.valueOf(date.getStartDate().getYear());
+                String toYear = String.valueOf(date.getEndDate().getYear());
+
+                String employeeName = serviceInstance.getRoomCategory();
+
+                File yearFolder = new File(serviceRevenueFolder, fromYear + "-" + toYear);
+                if (!yearFolder.exists()) yearFolder.mkdirs();
+
+                File saveFolder;
+                String initialFileName;
+
+                if (!forRoomCategory) {
+                    File dateRangeFolder = new File(yearFolder,
+                            date.getStartDate() + " đến " + date.getEndDate()
+                                    + "/Loại phòng/" + employeeName);
+                    if (!dateRangeFolder.exists()) dateRangeFolder.mkdirs();
+
+                    saveFolder = new File(dateRangeFolder.getPath());
+                    initialFileName = employeeName + " - TDTK-" + LocalDate.now() + ".xlsx";
+                } else {
+                    File dateRangeFolder = new File(yearFolder, date.getStartDate() + " đến " + date.getEndDate());
+                    if (!dateRangeFolder.exists()) dateRangeFolder.mkdirs();
+
+                    saveFolder = new File(dateRangeFolder.getPath());
+                    initialFileName = date.getStartDate() + " đến " + date.getEndDate()
+                            + "-TDTK-" + LocalDate.now() + ".xlsx";
+                }
+
+                fileChooser.setInitialDirectory(saveFolder);
+                fileChooser.setInitialFileName(initialFileName);
+
+                File userSelection = fileChooser.showSaveDialog(null);
+                if (userSelection != null) {
+                    String filePath = userSelection.getAbsolutePath();
+                    createRoomExcelFile(tableView, filePath, numOfInvoice, totalMoney);
+                    openExcelFile(filePath);
+                } else {
+                    System.out.println("No file selected.");
+                }
+            }
+            case ExportExcelCategory.DATE_RANGE -> {
+                RoomDisplayOnTable roomInstance = tableView.getItems().getFirst();
+                String year = String.valueOf(date.getStartDate().getYear());
+
+                String employeeName = roomInstance.getRoomCategory();
+
+                File yearFolder = new File(serviceRevenueFolder, year);
+                if (!yearFolder.exists()) yearFolder.mkdirs();
+
+                File saveFolder;
+                String initialFileName;
+
+                if (!forRoomCategory) {
+                    File dateRangeFolder = new File(yearFolder,
+                            date.getStartDate() + " đến " + date.getEndDate()
+                                    + "/Loại phòng/" + employeeName);
+                    if (!dateRangeFolder.exists()) dateRangeFolder.mkdirs();
+
+                    saveFolder = new File(dateRangeFolder.getPath());
+                    initialFileName = employeeName + " - TDTK-" + LocalDate.now() + ".xlsx";
+                } else {
+                    File dateRangeFolder = new File(yearFolder, date.getStartDate() + " đến " + date.getEndDate());
+                    if (!dateRangeFolder.exists()) dateRangeFolder.mkdirs();
+
+                    saveFolder = new File(dateRangeFolder.getPath());
+                    initialFileName = date.getStartDate() + " đến " + date.getEndDate()
+                            + "-TDTK-" + LocalDate.now() + ".xlsx";
+                }
+
+                fileChooser.setInitialDirectory(saveFolder);
+                fileChooser.setInitialFileName(initialFileName);
+
+                File userSelection = fileChooser.showSaveDialog(null);
+                if (userSelection != null) {
+                    String filePath = userSelection.getAbsolutePath();
+                    createRoomExcelFile(tableView, filePath, numOfInvoice, totalMoney);
                     openExcelFile(filePath);
                 } else {
                     System.out.println("No file selected.");
